--- a/assets/css/flipclock.css
+++ b/assets/css/flipclock.css
@@ -203,7 +203,8 @@
   top: -1.5em;
   right: -86px;
   color: white;
-  font-size: 150%;
+  font-size: 190%;
+  font-family: 'Kaushan Script', cursive;
     font-weight: bold;
   text-shadow: none; }
 
