--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,3 +4,10 @@
 
     color: black!important;
 }
+button {
+    border-radius: 0 !important;
+}
+.form-control
+{
+text-transform: none!important;
+}
