--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -85,6 +85,7 @@
     }
 }
 @media (max-width: 700px) {
+
     .card {
         width: 100%;
         height: 290px;
@@ -96,6 +97,9 @@
     }
     .card__back{
         width: 100%!important;
+    }
+    .card:nth-child(4) {
+        margin-left: 0!important;
     }
 }
 main {
