--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -85,7 +85,10 @@
     }
 }
 @media (max-width: 700px) {
-
+    .spardhas
+    {
+        height: 100%!important;
+    }
     .card {
         width: 100%;
         height: 290px;
