--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html {
 
 body {
     background: #fff;
-    font: 400 12px/1.8 "Open Sans", Verdana, sans-serif;
+    font: 400 12px/1.8 "Times New Roman", Verdana, sans-serif;
     color: #666;
     -webkit-font-smoothing: antialiased;
 }
