--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,10 +13,10 @@ text-transform: none!important;
     border-radius: 0!important;
 }
 .navhead{
-    font-family: 'Times New Roman', sans-serif;
+    font-family: 'Alfa Slab One', cursive;
 }
 .heads{
-    font-family: 'Times New Roman', cursive;
+    font-family: 'Alfa Slab One', cursive;
 }
 .caption-content {
 
