--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -51,7 +51,7 @@
     font-family: 'Patua One';
     font-style: normal;
     font-weight: 400;
-    src: local('Patua One'), local('PatuaOne-Regular'), url(http://fonts.gstatic.com/s/patuaone/v7/yAXhog6uK3bd3OwBILv_SFtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+    src: local('Patua One'), local('PatuaOne-Regular'), url(https://fonts.gstatic.com/s/patuaone/v7/yAXhog6uK3bd3OwBILv_SFtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 /* vietnamese */
@@ -59,7 +59,7 @@
     font-family: 'Bungee Inline';
     font-style: normal;
     font-weight: 400;
-    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(http://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCWZCNdB5zfuti8v2ibpGJKY.woff2) format('woff2');
+    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(https://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCWZCNdB5zfuti8v2ibpGJKY.woff2) format('woff2');
     unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -67,7 +67,7 @@
     font-family: 'Bungee Inline';
     font-style: normal;
     font-weight: 400;
-    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(http://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCX1PgMwFt2V-WJ2uOZ4WXLU.woff2) format('woff2');
+    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(https://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCX1PgMwFt2V-WJ2uOZ4WXLU.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -75,6 +75,6 @@
     font-family: 'Bungee Inline';
     font-style: normal;
     font-weight: 400;
-    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(http://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCTxObtw73-qQgbr7Be51v5c.woff2) format('woff2');
+    src: local('Bungee Inline'), local('BungeeInline-Regular'), url(https://fonts.gstatic.com/s/bungeeinline/v3/Tb-1914q4rFpjT-F66PLCTxObtw73-qQgbr7Be51v5c.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
