--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url("slider.css");
 @import url("vertical.css");
 @import url("http://fonts.googleapis.com/css?family=Montserrat:400");
-@import url("http://fonts.googleapis.com/css?family=Maiandra GD Regular:400,700");
+@import url("http://fonts.googleapis.com/css?family=Inconsolata:400,700");
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700");
 
 /* ------------------------------------------------------------------
@@ -17,7 +17,7 @@ html {
 
 body {
     background: #fff;
-    font: 400 12px/1.8 "Maiandra GD Regular", Verdana, sans-serif;
+    font: 400 12px/1.8 "Open Sans", Verdana, sans-serif;
     color: #666;
     -webkit-font-smoothing: antialiased;
 }
@@ -125,7 +125,7 @@ Form styles
 ------------------------------------------------------------------- */
 
 .form-control {
-    font-family: "Maiandra GD Regular", cursive;
+    font-family: "Inconsolata", sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-size: 11px;
@@ -159,7 +159,7 @@ Button styles
 
 .btn {
     padding: 8px 37px;
-    font-family: "Maiandra GD Regular", sans-serif;
+    font-family: "Inconsolata", sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-size: 11px;
@@ -506,7 +506,7 @@ blockquote {
 }
 
 .font-inc {
-    font-family: "Maiandra GD Regular", sans-serif;
+    font-family: "Inconsolata", sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.1em;
 }
@@ -538,7 +538,7 @@ Navbar
     border-color: #f5f5f5 !important;
     border-bottom: 1px solid #f5f5f5 !important;
     border-radius: 0;
-    font-family: "Maiandra GD Regular", sans-serif;
+    font-family: "Inconsolata", sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.15em;
     font-size: 13px;
