--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -3,8 +3,8 @@
     src: url('Maiandra GD Regular.ttf');
 }
 @font-face {
-    font-family: 'Monotype Corsiva';
-    src: url('Monotype Corsiva.ttf');
+    font-family: 'BRADHITC';
+    src: url('BRADHITC.TTF');
 }
 /* vietnamese */
 @font-face {
