--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -92,12 +92,15 @@
     }
     .card {
         width: 100%;
-        height: 320px;
+        height: 290px;
         margin-right: 0;
         float: none;
     }
-    .card .card__front, .card .card__back {
-        height: 310px;
+    .card .card__front{
+        height: 290px;
+    }
+    .card .card__back{
+        height: 400px;
     }
     .card__back{
         width: 100%!important;
